...
    <string name="register_success_title">Success!</string>
    <string name="register_success_message">Welcome to the Fit Nation! To complete the regestration process please confirm your email</string>

    <string name="bottom_bar">Bottom Bar Color</string>

    <!--Build Workout-->
    <string name="beginner">BEGINNER</string>
    <string name="intermediate">INTERMEDIATE</string>
    <string name="advanced">ADVANCED</string>
    <string name="save_workout_title">Name your workout:</string>
    <string name="save_button">Save</string>
    <string name="completed">Complete</string>
    <string name="build_workout_title">Create a Workout</string>
    <string name="dialog_build_workout_success_message">"Your workout was successfully "</string>
    <string name="dialog_build_workout_failure_message">"Workout save failed. Error: "</string>
...


    <!--Error/Success/Progress Dialogs-->
    <string name="progress_message">Please wait...</string>
    <string name="dialog_success_title">Success</string>
    <string name="dialog_error_title">Error</string>
    <string name="alert_dialog_ok_button">OK</string>
    <string name="volley_title_access_refreshed">Access Refreshed</string>
    <string name="volley_message_access_refreshed">Authorization has been refreshed</string>
    <string name="volley_title_no_response">No Response</string>
    <string name="volley_message_no_response">There was no response from the server. Please make sure that you are connected to the internet</string>

    <string name="volley_title_100">Success</string>
...
