...
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/add_exercise_box"
                style="@style/CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
...
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/set_one_reps"
                app:layout_constraintRight_toRightOf="@+id/set_one_reps" />

            <View
                android:id="@+id/edit_exercise_surface_view"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/edit_exercise"
...
